[gd_scene load_steps=24 format=3 uid="uid://cdywurg5q5oy"]

[ext_resource type="PackedScene" uid="uid://dbycwfj8613ho" path="res://PJ-Jump/KayKit_Adventurers_1.0_FREE/KayKit_Adventurers_1.0_FREE/Characters/gltf/Knight.glb" id="1_26ldq"]
[ext_resource type="Script" uid="uid://d5kpyrsocrru" path="res://knight.gd" id="2_gadha"]
[ext_resource type="AudioStream" uid="uid://ysxpjdsnff8a" path="res://toy-button-105724.mp3" id="3_o118k"]
[ext_resource type="AudioStream" uid="uid://dipk2wf4wxukd" path="res://landing_sfx-1.mp3" id="4_hnm0a"]
[ext_resource type="AudioStream" uid="uid://bqoqxl7cxo5xf" path="res://knife_sfx-2.mp3" id="5_k3kcr"]
[ext_resource type="Script" uid="uid://bsnef6hlfo54f" path="res://pause_menu.gd" id="6_1o34j"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_owtlo"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nsuie"]
animation = &"Running_A"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_26ldq"]
animation = &"Walking_Backwards"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_np0bx"]
animation = &"Running_Strafe_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_go3up"]
animation = &"Running_Strafe_Left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_gadha"]
blend_point_0/node = SubResource("AnimationNodeAnimation_owtlo")
blend_point_0/pos = Vector2(0, -0.6)
blend_point_1/node = SubResource("AnimationNodeAnimation_nsuie")
blend_point_1/pos = Vector2(0, 0.9)
blend_point_2/node = SubResource("AnimationNodeAnimation_26ldq")
blend_point_2/pos = Vector2(0, -0.9)
blend_point_3/node = SubResource("AnimationNodeAnimation_np0bx")
blend_point_3/pos = Vector2(1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_go3up")
blend_point_4/pos = Vector2(-1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7woc6"]
animation = &"Jump_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nabqu"]
animation = &"Jump_Land"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ttilu"]
animation = &"Jump_Start"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o118k"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ir7sf"]
advance_mode = 2
advance_condition = &"jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2yhar"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6j7tr"]
advance_mode = 2
advance_condition = &"grounded"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1hfkx"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dbld7"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_hnm0a"]
states/IWR/node = SubResource("AnimationNodeBlendSpace2D_gadha")
states/IWR/position = Vector2(465, 151)
states/Jump_Idle/node = SubResource("AnimationNodeAnimation_7woc6")
states/Jump_Idle/position = Vector2(486, 290)
states/Jump_Land/node = SubResource("AnimationNodeAnimation_nabqu")
states/Jump_Land/position = Vector2(717, 280)
states/Jump_Start/node = SubResource("AnimationNodeAnimation_ttilu")
states/Jump_Start/position = Vector2(262, 290)
transitions = ["Start", "IWR", SubResource("AnimationNodeStateMachineTransition_o118k"), "IWR", "Jump_Start", SubResource("AnimationNodeStateMachineTransition_ir7sf"), "Jump_Start", "Jump_Idle", SubResource("AnimationNodeStateMachineTransition_2yhar"), "Jump_Idle", "Jump_Land", SubResource("AnimationNodeStateMachineTransition_6j7tr"), "Jump_Land", "IWR", SubResource("AnimationNodeStateMachineTransition_1hfkx"), "IWR", "Jump_Idle", SubResource("AnimationNodeStateMachineTransition_dbld7")]
graph_offset = Vector2(195.757, 0)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_y3qlt"]
height = 2.4

[node name="Knight" instance=ExtResource("1_26ldq")]
script = ExtResource("2_gadha")
mouse_sensitivity = null
min_jump_power = null
max_jump_power = null
jump_charge_rate = null
move_speed = null
bounce_speed = null
respawn_position = null
fall_limit = null
min_zoom = null
max_zoom = null
zoom_speed = null
zoom_hide_threshold = null

[node name="Skeleton3D" parent="Rig" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
bones/0/position = Vector3(0, 0.020239, 0)
bones/0/rotation = Quaternion(-1.98663e-11, -0.000577176, -3.44095e-11, 1)
bones/1/position = Vector3(1.95853e-18, 0.406935, -1.95853e-18)
bones/1/rotation = Quaternion(0.0389412, 0.0256308, -0.000922015, 0.998912)
bones/2/rotation = Quaternion(0.0457636, 0.0529314, -0.0042176, 0.99754)
bones/3/rotation = Quaternion(0.017117, 0.00104148, 0.00438755, 0.999843)
bones/4/position = Vector3(0.211979, 0.130246, -0.0199136)
bones/4/rotation = Quaternion(-0.650677, -0.121097, -0.597331, 0.452936)
bones/5/rotation = Quaternion(2.91109e-08, -4.72804e-08, -0.535385, 0.844608)
bones/7/rotation = Quaternion(-0.219176, -0.341404, 0.0241182, 0.913687)
bones/8/position = Vector3(-4.74845e-08, 0.0961252, -0.0575)
bones/8/rotation = Quaternion(-0.0222115, 0.0222306, -0.642176, 0.765913)
bones/14/position = Vector3(-0.201633, 0.125066, -0.0171189)
bones/14/rotation = Quaternion(-0.721839, 0.0810899, 0.48405, 0.487923)
bones/15/rotation = Quaternion(2.04606e-08, 4.83384e-08, 0.511637, 0.859202)
bones/17/rotation = Quaternion(-0.243817, 0.353571, -0.0131475, 0.902977)
bones/18/position = Vector3(1.4439e-08, 0.0961251, -0.0575)
bones/18/rotation = Quaternion(-0.0219581, -0.0218215, 0.64242, 0.765727)
bones/21/rotation = Quaternion(-0.0528545, -0.0693853, 0.00203769, 0.996187)
bones/24/position = Vector3(0.170945, 0.113587, 0.0405884)
bones/24/rotation = Quaternion(0.980534, 0.0418097, 0.0520135, 0.184663)
bones/25/rotation = Quaternion(0.157649, 6.71431e-08, -1.09969e-07, 0.987495)
bones/26/rotation = Quaternion(-0.53265, -0.124618, 0.0299116, 0.836576)
bones/27/rotation = Quaternion(-1.81658e-08, 0.920355, -0.391084, 7.47152e-08)
bones/28/position = Vector3(-0.170945, 0.113587, -0.0405883)
bones/28/rotation = Quaternion(0.998263, -0.0181732, 0.0184651, 0.0529208)
bones/29/rotation = Quaternion(0.45324, -5.98828e-08, 3.14636e-07, 0.891389)
bones/30/rotation = Quaternion(-0.421819, 0.066548, -0.0164484, 0.904085)
bones/31/rotation = Quaternion(3.04109e-08, 0.920355, -0.391084, -6.95261e-08)
bones/32/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/33/position = Vector3(0.189503, 0.157848, 0.364932)
bones/33/rotation = Quaternion(-0.82446, -5.52803e-08, -8.33984e-08, 0.56592)
bones/34/position = Vector3(1.94417e-08, 0.362833, -2.42861e-15)
bones/34/rotation = Quaternion(5.7675e-09, 1.04521e-09, 0.994951, -0.100358)
bones/35/position = Vector3(-1.3986e-08, 0.213436, -3.07247e-09)
bones/35/rotation = Quaternion(-1.02392e-07, 0.391084, 0.920355, -3.19003e-08)
bones/36/position = Vector3(2.5746e-09, 0.16565, -3.4981e-09)
bones/37/rotation = Quaternion(1, -1.3687e-09, 1.97719e-07, 2.05287e-12)
bones/39/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/40/position = Vector3(-0.170945, 0.0716333, -0.047087)
bones/40/rotation = Quaternion(-0.37528, -9.49221e-08, -3.49416e-08, 0.926911)
bones/41/position = Vector3(1.95074e-08, 0.362833, 2.41268e-08)
bones/41/rotation = Quaternion(-3.4805e-09, 3.83514e-10, 0.998167, 0.0605228)
bones/42/position = Vector3(-5.10008e-09, 0.213436, 8.70777e-09)
bones/42/rotation = Quaternion(-1.05077e-07, 0.391084, 0.920355, -2.73595e-08)
bones/43/position = Vector3(-6.29485e-09, 0.16565, 1.08815e-08)
bones/44/rotation = Quaternion(1, 2.25582e-09, 1.94815e-07, 4.4183e-09)
bones/46/position = Vector3(0.453237, 1.02558, -0.629562)
bones/46/rotation = Quaternion(-0.707107, 0.000135997, 0.000135997, 0.707107)
bones/47/position = Vector3(0.517735, 0.807654, 0.0136569)
bones/47/rotation = Quaternion(0.821453, 0.203329, 0.529047, 0.0631024)
bones/48/position = Vector3(-0.454207, 1.02536, -0.628652)
bones/48/rotation = Quaternion(-0.707107, 0.000135997, 0.000135997, 0.707107)
bones/49/position = Vector3(-0.511653, 0.807654, 0.0840089)
bones/49/rotation = Quaternion(-0.80319, 0.194084, 0.559825, -0.0617463)

[node name="1H_Sword_Offhand" parent="Rig/Skeleton3D" index="0"]
transform = Transform3D(-0.195054, 0.253399, 0.947492, 0.964356, 0.225666, 0.138173, -0.178804, 0.940671, -0.288384, 0.543835, 0.692587, 0.0892053)
visible = false

[node name="Badge_Shield" parent="Rig/Skeleton3D" index="1"]
transform = Transform3D(-0.195054, 0.253399, 0.947492, 0.964356, 0.225664, 0.138174, -0.178801, 0.940672, -0.288383, 0.691535, 0.714126, 0.0442505)
visible = false

[node name="Rectangle_Shield" parent="Rig/Skeleton3D" index="2"]
transform = Transform3D(-0.195054, 0.253399, 0.947492, 0.964356, 0.225664, 0.138174, -0.178801, 0.940672, -0.288383, 0.691535, 0.714126, 0.0442505)
visible = false

[node name="Round_Shield" parent="Rig/Skeleton3D" index="3"]
transform = Transform3D(-0.195054, 0.253399, 0.947492, 0.964356, 0.225664, 0.138174, -0.178801, 0.940672, -0.288383, 0.691535, 0.714126, 0.0442505)
visible = false

[node name="Spike_Shield" parent="Rig/Skeleton3D" index="4"]
transform = Transform3D(-0.195054, 0.253399, 0.947492, 0.964356, 0.225664, 0.138174, -0.178801, 0.940672, -0.288383, 0.691535, 0.714126, 0.0442505)
visible = false

[node name="1H_Sword" parent="Rig/Skeleton3D" index="5"]
transform = Transform3D(0.245797, -0.224179, 0.943041, 0.953468, 0.231146, -0.193568, -0.174586, 0.946739, 0.270563, -0.566697, 0.718962, 0.173123)
visible = false

[node name="2H_Sword" parent="Rig/Skeleton3D" index="6"]
transform = Transform3D(0.245797, -0.224179, 0.943041, 0.953468, 0.231146, -0.193568, -0.174586, 0.946739, 0.270563, -0.566697, 0.718962, 0.173123)
visible = false

[node name="Knight_Helmet" parent="Rig/Skeleton3D" index="7"]
transform = Transform3D(0.999819, 0.00485396, 0.0184056, -0.00302447, 0.995167, -0.0981541, -0.0187931, 0.0980806, 0.995001, 0.0135438, 1.226, 0.129378)

[node name="Knight_Cape" parent="Rig/Skeleton3D" index="8"]
transform = Transform3D(0.987651, 0.0181522, 0.155614, 0.0138538, 0.979255, -0.202156, -0.156055, 0.201816, 0.966911, 0.0132038, 1.2264, 0.12673)

[node name="AnimationPlayer" parent="." index="1"]
autoplay = "Jump_Full_Long"

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = SubResource("AnimationNodeStateMachine_hnm0a")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/grounded = false
parameters/conditions/jumping = false
parameters/IWR/blend_position = Vector2(0.00110257, 0.00783288)

[node name="jump_sfx" type="AudioStreamPlayer2D" parent="." index="3"]
stream = ExtResource("3_o118k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("CylinderShape3D_y3qlt")

[node name="TwistPivot" type="Node3D" parent="." index="5"]

[node name="PitchPivot" type="Node3D" parent="TwistPivot" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 4)
current = true

[node name="Landing_sfx" type="AudioStreamPlayer3D" parent="." index="6"]
stream = ExtResource("4_hnm0a")

[node name="Full_Charge_sfx" type="AudioStreamPlayer2D" parent="." index="7"]
stream = ExtResource("5_k3kcr")

[node name="PauseMenu" type="CanvasLayer" parent="." index="8"]
process_mode = 2
script = ExtResource("6_1o34j")

[node name="Panel" type="ColorRect" parent="PauseMenu" index="0"]
offset_left = 48.0
offset_top = 85.0
offset_right = 978.0
offset_bottom = 510.0
color = Color(0.32, 0.32, 0.32, 0)

[node name="Volume" type="Label" parent="PauseMenu/Panel" index="0"]
layout_mode = 1
anchors_preset = -1
anchor_right = 4.25
anchor_bottom = 1.675
offset_left = 173.0
offset_top = 204.0
offset_right = -3720.5
offset_bottom = -484.875
text = "Volume"

[node name="Mouse sensitivity" type="Label" parent="PauseMenu/Panel" index="1"]
layout_mode = 0
offset_left = 138.0
offset_top = 146.0
offset_right = 272.0
offset_bottom = 169.0
text = "Mouse sensitivity"

[node name="MouseSlider" type="HSlider" parent="PauseMenu/Panel" index="2"]
layout_mode = 0
offset_left = 338.0
offset_top = 154.0
offset_right = 721.0
offset_bottom = 170.0
min_value = 0.001
max_value = 0.01
step = 0.001
value = 0.001

[node name="VolumeSlider" type="HSlider" parent="PauseMenu/Panel" index="3"]
layout_mode = 0
offset_left = 353.0
offset_top = 209.0
offset_right = 724.0
offset_bottom = 232.0
max_value = 1.0
step = 0.01

[node name="ConfirmButton" type="Button" parent="PauseMenu/Panel" index="4"]
layout_mode = 0
offset_left = 363.0
offset_top = 308.0
offset_right = 434.0
offset_bottom = 339.0
text = "Confirm"
